<resources>
    <string name="app_name">JobSearchOnlineTortinchi</string>
    <string name="welcome_to_our_portal_we_are_the_best_job_portal">Welcome to our portal, we are the best job portal</string>
    <string name="next">Next</string>
    <string name="the_place_where_work_finds_you">The place where work finds you</string>
    <string name="get_started">Get started</string>
    <string name="let_s_start_your_career_with_us_now">Let\'s start your career with us now</string>
    <string name="create_new_account">Create New Account</string>
    <string name="remember">Remember</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="choose_your_job_type">Choose Your Job Type</string>
    <string name="choose_whether_you_are_looking_for_a_job_or_you_are_an_organization_company_that_needs_employees">choose whether you are looking for a job or you are an organization company that needs employees</string>
    <string name="i_want_to_find_employees">I want to find employees</string>
    <string name="i_want_to_find_a_job_for_me">I want to find a job for me</string>
    <string name="find_an_employee">Find an Employee</string>
    <string name="find_a_job">Find a Job</string>
    <string name="buxgalteriya_va_moliya">Buxgalteriya va moliya</string>
    <string name="arxitektura_va_muhandislik">Arxitektura va muhandislik</string>
    <string name="information_technology_and_software">Information technology and Software</string>
    <string name="management_and_consultancy">Management and consultancy</string>
    <string name="media_dizayn_va_ijodkorlik">Media, dizayn va ijodkorlik</string>
    <string name="savdo_va_marketing">Savdo va marketing</string>
    <string name="informatics_instructor">Informatics instructor</string>
    <string name="Davom_Eting">continue</string>
    <string name="mutaxassisligingizni_tanlang">Mutaxassisligingizni tanlang</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nickname">Nickname</string>
    <string name="full_name">Full Name</string>
    <string name="full">Full Name</string>
</resources>