<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IshchiMutaxassisligi">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BFEAF5">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:text="     Sizga kerakli Mutaxassis yo'nalishini tanlang"
            android:layout_marginBottom="100dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/RadioButton"
                android:layout_width="match_parent"
                android:text="@string/buxgalteriya_va_moliya"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_height="70dp"
                android:layout_marginTop="180dp" />

            <CheckBox
                android:id="@+id/RadioButton1"
                android:layout_width="match_parent"
                android:text="@string/arxitektura_va_muhandislik"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_height="70dp" />

            <CheckBox
                android:id="@+id/RadioButton2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/information_technology_and_software"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />
            <CheckBox
                android:id="@+id/RadioButton3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/management_and_consultancy"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />
            <CheckBox
                android:id="@+id/RadioButton4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/media_dizayn_va_ijodkorlik"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <CheckBox
                android:id="@+id/RadioButton5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/savdo_va_marketing"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/RadioButton6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/informatics_instructor"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="203dp"
                android:layout_height="58dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="5dp"
                android:text="Continue" />


        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>