<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShaxsiyMalumotingizniKiriting">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">



    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="350sp"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="450sp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="550sp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_marginTop="650dp"
        android:text="Continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/full"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="150sp" />

    <EditText
        android:id="@+id/editTextTextPassword1"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="250sp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>